@@ -1,3 +1,7 @@
+2011-07-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* add menu with about dialog
+
 2011-07-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix different line length problem
